# fewshot

./: .gitignore  README.md  all.py  circles.py  fewshot.py  flick.py  hotpot.py  humaneval.py  lib.py  main.py  opt.py  optimizers.py  pyproject.toml  requirements.txt  templates.py
examples/: .beans.py.swp  beans.py  blind.py  circles.py  hotpot.py  humaneval.py  image_datasets.py  image_multiple_choice.py  simple.py
experimental/: opt.py
fewshot/: __init__.py  optimizers.py  predict.py  templates.py  utils.py  wrap.py
fewshot/experimental/: grad.py  optimizers_experimental.py  tinytextgrad.py
tests/: example.py  test_circles.py  test_code.py  test_image.py  test_pred.py  test_qa.py  test_sig.py  test_tinytextgrad.py  test_types.py  tests.py
